fix search bar on small screens

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -83,7 +83,7 @@
       }
       .header-search {
         .header-search-bar {
-          width: min(40vw, 600px);
+          width: min(25vw, 500px);
           height: 5vh;
           text-indent: 1em;
           border-radius: 20px;
@@ -92,13 +92,13 @@
         .header-search-results {
           position: absolute;
           bottom: -10;
-          width: min(40vw, 600px);
+          width: min(25vw, 500px);
           border-radius: 20px;
           display: flex;
           flex-direction: column;
           align-items: flex-start;
           justify-content: flex-start;
-          background: $clr-light;
+          background: white;
           padding: 1em;
           cursor: pointer;
           * {
@@ -197,11 +197,12 @@
         }
       }
         .header-search {
-          width: min(85vw, 600px);
-          height: 5vh;
-          text-indent: 1em;
-          border-radius: 10px;
-          color: black;
+          .header-search-bar {
+            width: min(85vw);
+          }
+          .header-search-results {
+            width: min(85vw);
+          }
         }
         .header-account-holder {
           position: absolute;
